--- a/src/style/card.css
+++ b/src/style/card.css
@@ -13,7 +13,8 @@
 .body-card {
   color: white;
   display: flex;
-  width: 18.875rem;
+  /* width: 18.875rem; */
+  min-width: 14.048rem;
   padding: 1.5rem 1rem;
   flex-direction: column;
   justify-content: center;
@@ -184,7 +185,7 @@
   }
 }
 
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
   .body-card {
     color: white;
     display: flex;
@@ -196,7 +197,7 @@
     gap: 2rem;
     border-radius: 2rem;
   }
-}
+} */
 
 @keyframes ScrollSobe {
   0% {
