--- a/src/style/card.css
+++ b/src/style/card.css
@@ -199,6 +199,14 @@
   }
 } */
 
+@media (max-width: 425px) {
+  .card-display {
+    position: relative;
+    top: -100px;
+    right: 2rem;
+  }
+}
+
 @keyframes ScrollSobe {
   0% {
     transform: translateY(calc(100vh - 208%));
