--- a/src/index.css
+++ b/src/index.css
@@ -15,17 +15,23 @@ h6 {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 0px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.9);
+  box-shadow: inset 0 0 5px black;
+  /* border-radius: 10px; */
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: red;
-  border-radius: 1px;
+  background: linear-gradient(
+    0deg,
+    rgba(0, 212, 255, 1) 0%,
+    rgba(228, 167, 97, 1) 35%,
+    rgba(249, 102, 57) 100%
+  );
+  border-radius: .2rem;
 }
