--- a/src/style/home.css
+++ b/src/style/home.css
@@ -18,6 +18,7 @@ header {
     background-position-x: center;
   }
   .container-principal {
+    height: 100vh;
     background-position-y: bottom;
     background-position-x: center;
     background-size: cover;
