--- a/src/components/style/home.css
+++ b/src/components/style/home.css
@@ -1,7 +1,7 @@
 header {
   background-image: url("../assets/image/background-principal.svg");
   background-position-y: top;
-  background-size: auto;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
