--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,13 @@
-* {
+body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: "Plus Jakarta Sans", sans-serif;
-}
-
-/* width */
-::-webkit-scrollbar {
-  width: 00px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.9);
-  box-shadow: inset 0 0 5px black;
-  /* border-radius: 10px; */
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(
-    0deg,
-    rgba(0, 212, 255, 1) 0%,
-    rgba(228, 167, 97, 1) 35%,
-    rgba(249, 102, 57) 100%
-  );
-  border-radius: .2rem;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
